infra/ec2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: EC2

Parameters:
  EnvName:
    Type: String
    Default: prod

Resources:
  KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyFormat: pem
      KeyName: !Sub ${EnvName}-KeyPair
      KeyType: ed25519
      Tags:
        - Key: Name
          Value: !Sub ${EnvName}-EC2

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP access
      VpcId:
        Fn::ImportValue: 
          !Sub "${EnvName}-VPC-Output"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 27.131.238.0/24
      Tags:
        - Key: Name
          Value: !Sub ${EnvName}-ALB-SecurityGroup

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      LoadBalancerAttributes: 
        - Key: access_logs.s3.enabled
          Value: false
        - Key: idle_timeout.timeout_seconds
          Value: 60
      Name: !Sub ${EnvName}-ALB
      Scheme: internet-facing
      SecurityGroups: 
        - !Ref ALBSecurityGroup
      Subnets: 
        - Fn::ImportValue: !Sub "${EnvName}-PublicSubnet1a-Output"
        - Fn::ImportValue: !Sub "${EnvName}-PublicSubnet1c-Output"
      Tags: 
        - Key: Name
          Value: !Sub ${EnvName}-ALB

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckPort: 80
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 6
      HealthyThresholdCount: 5
      IpAddressType: ipv4
      Matcher: 
        HttpCode: "200"
      Name: !Sub "${EnvName}-TargetGroup"
      Port: 80
      Protocol: HTTP
      ProtocolVersion: HTTP1
      #TargetGroupAttributes: 
      #- TargetGroupAttribute
      Targets: 
        - Id: !Ref EC2
      TargetType: instance
      UnhealthyThresholdCount: 2
      VpcId:
        Fn::ImportValue:
          !Sub "${EnvName}-VPC-Output"
      Tags:
        - Key: Name
          Value: !Sub ${EnvName}-ALB-TargetGroup

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
      #Certificates: 
      #- Certificate
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            StatusCode: 404
            ContentType: text/plain
            MessageBody: "Not Found"
  
  ALBDomainListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref ALBListener
      Priority: 1
      Actions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup
      Conditions:
        - Field: host-header
          HostHeaderConfig:
            Values:
              - "ihihihihih123456.com"
              - "www.ihihihihih123456.com"
      #SslPolicy: String

  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access
      VpcId:
        Fn::ImportValue: 
          !Sub "${EnvName}-VPC-Output"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 27.131.238.0/24
      Tags:
        - Key: Name
          Value: !Sub ${EnvName}-EC2-SecurityGroup

  EC2:
    Type: AWS::EC2::Instance
    Properties:
      DisableApiTermination: false
      EbsOptimized: false
      #IamInstanceProfile: String
      ImageId: ami-08ce76bae392de7dc
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: t3.nano
      KeyName: !Ref KeyPair
      Monitoring: false
      SecurityGroupIds: 
        - !Ref Ec2SecurityGroup
      SourceDestCheck: true
      SubnetId:
        Fn::ImportValue:
          !Sub "${EnvName}-PublicSubnet1a-Output"
      Tags:
        - Key: Name
          Value: !Sub ${EnvName}-EC2
      Tenancy: default

  EC2ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref EC2

Outputs:
  EC2ElasticIPId:
    Value: !GetAtt EC2.PublicIp
    Export:
      Name: !Sub ${EnvName}-EC2-PublicIp
  ALBDNSName:
    Value: !GetAtt ALB.DNSName
    Export:
      Name: ALBDNSNameExport
  ALBHostedZoneId:
    Value: !GetAtt ALB.CanonicalHostedZoneID
    Export:
      Name: ALBHostedZoneIdExport
